--- a/blueworks/templates/dashboard.html
+++ b/blueworks/templates/dashboard.html
@@ -174,6 +174,8 @@
   <script src="{% static 'blueworks/js/main.js' %}"></script>
   <script src="{% static 'blueworks/js/highchart/highcharts.js' %}"></script>
   <script src="{% static 'blueworks/js/highchart/highcharts-3d.js' %}"></script>
+  <script src="{% static 'blueworks/js/highchart/exporting.js' %}"></script>
+  <script src="{% static 'blueworks/js/highchart/export-data.js' %}"></script>
   <script type="text/javascript">
     (function ($) {
       function plot_one(data, params) {
