--- a/blueworks/templates/tabs.html
+++ b/blueworks/templates/tabs.html
@@ -252,7 +252,7 @@
                                                             aria-expanded="false" class="nav-link dropdown-toggle">
                                                             <i class="fa fa-user adminpro-user-rounded header-riht-inf"
                                                                 aria-hidden="true"></i>
-                                                            <span class="admin-name">Steph Walker</span>
+                                                            <span class="admin-name" id="username"></span>
                                                             <i
                                                                 class="fa fa-angle-down adminpro-icon adminpro-down-arrow"></i>
                                                         </a>
