--- a/blueworks/templates/index.html
+++ b/blueworks/templates/index.html
@@ -44,49 +44,69 @@
         </div>
         <div class="hpanel">
           <div class="panel-body">
-            <form action="/blueworks/login" method="POST" id="loginForm">
+            <div id="loginForm">
               <label for="">Email</label>
               <div class="input-group mg-b-15">
                 <span class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                <input type="text" name="id" class="form-control input-lg" placeholder="e-mail, phone or pseudo">
+                <input type="text" id="crd" class="form-control input-lg" placeholder="e-mail, phone or pseudo">
               </div>
               <label for="">Mot de passe</label>
               <div class="input-group mg-b-15">
                 <span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
-                <input type="password" name="p" class="form-control input-lg" placeholder="password">
+                <input type="password" id="k" class="form-control input-lg" placeholder="password">
               </div>
               <input type="hidden" name="s" value="BlueWorkS1">
-              {% if msg != None and level == 1 %}
               <div>
-                <p style="color: yellowgreen; text-align: center">{{msg}}</p>
+                <p style="text-align: center" id="error"></p>
               </div>
-              {% endif %}
-              {% if msg != None and level == 0 %}
-              <div>
-                <p style="color: red; text-align: center">{{msg}}</p>
-              </div>
-              {% endif %}
-              <button class="btn btn-success btn-block loginbtn">Login</button>
-            </form>
+              <div class="btn btn-success btn-block loginbtn" id="login">Login</div>
+              </form>
+            </div>
           </div>
         </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"></div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"></div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 col-md-12 col-sm-12 col-xs-12 text-center">
-        <p>Copyright &copy; 2019 <a href="https://blueworkspaces.com/">BlueWorkS</a> All rights reserved.
-          <br>By Kimia technologies</p>
+      <div class="row">
+        <div class="col-md-12 col-md-12 col-sm-12 col-xs-12 text-center">
+          <p>Copyright &copy; 2019 <a href="https://blueworkspaces.com/">BlueWorkS</a> All rights reserved.
+            <br>By Kimia technologies</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- jquery
+    <!-- jquery
 		============================================ -->
-  <script src="{% static 'blueworks/js/vendor/jquery-1.11.3.min.js' %}"></script>
-  <!-- bootstrap JS
+    <script src="{% static 'blueworks/js/vendor/jquery-1.11.3.min.js' %}"></script>
+    <!-- bootstrap JS
 		============================================ -->
-  <script src="{% static 'blueworks/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'blueworks/js/bootstrap.min.js' %}"></script>
+    <script lang="javascript">
+      (function ($) {
+        $('#login').on('click', function () {
+          $.ajax({
+            url: 'http://127.0.0.1:1111/api.blueworks/login',
+            method: 'POST',
+            dataType: 'JSON',
+            data: {
+              id: $('#crd').val(),
+              k: $('#k').val()
+            },
+            success: function (data) {
+              localStorage.setItem('token', data.token);
+              localStorage.setItem('pseudo', data.user.pseudo);
+              sessionStorage.setItem('ipf', data.refreshToken);
+              window.location = 'accueil.html';
+            },
+            error: function (xhr, err) {
+              $('#error').html(xhr.responseJSON.msg).css({
+                'color': 'red'
+              })
+            },
+            async: true
+          });
+        });
+      }(jQuery));
+    </script>
 </body>
 
 </html>
